hopefully this built?

--- a/public/404.html
+++ b/public/404.html
@@ -70,8 +70,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -258,11 +258,15 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/cropping-rasters-down-to-size/">Cropping rasters down to size</a></li>
+    <li><a href="http://www.jamieafflerbach.com/post/cropping-rasters-down-to-size/">Cropping rasters down to size</a></li>
   </ul>
   
   <ul>
-    <li><a href="/post/global_seafood_growth_dataviz/">Visualizing growth in global seafood production</a></li>
+    <li><a href="http://www.jamieafflerbach.com/post/cropping-rasters-down-to-size/">Cropping rasters down to size</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="http://www.jamieafflerbach.com/post/global_seafood_growth_dataviz/">Visualizing growth in global seafood production</a></li>
   </ul>
   
   
@@ -272,23 +276,23 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/ensembles_fish_and_fisheries_2017/">Improving estimates of population status and trend with superensemble models</a></li>
+    <li><a href="http://www.jamieafflerbach.com/publication/ensembles_fish_and_fisheries_2017/">Improving estimates of population status and trend with superensemble models</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/turfs_gecco_2014/">A global survey of TURF-reserves, Territorial Use Rights for Fisheries coupled with marine reserves</a></li>
+    <li><a href="http://www.jamieafflerbach.com/publication/turfs_gecco_2014/">A global survey of TURF-reserves, Territorial Use Rights for Fisheries coupled with marine reserves</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/fish_response_el_nino_meps/">Eastern Pacific reef fish responses to coral recovery following El Niño disturbances</a></li>
+    <li><a href="http://www.jamieafflerbach.com/publication/fish_response_el_nino_meps/">Eastern Pacific reef fish responses to coral recovery following El Niño disturbances</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/coral_repro_2012/">Reef coral reproduction in the equatorial eastern Pacific: Costa Rica, Panamá, and the Galápagos Islands (Ecuador). VII. Siderastreidae, Psammocora stellata and Psammocora profundacella.</a></li>
+    <li><a href="http://www.jamieafflerbach.com/publication/coral_repro_2012/">Reef coral reproduction in the equatorial eastern Pacific: Costa Rica, Panamá, and the Galápagos Islands (Ecuador). VII. Siderastreidae, Psammocora stellata and Psammocora profundacella.</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/cryptofauna_meps_2011/">Environmental determinants of motile cryptofauna on an eastern Pacific coral reef</a></li>
+    <li><a href="http://www.jamieafflerbach.com/publication/cryptofauna_meps_2011/">Environmental determinants of motile cryptofauna on an eastern Pacific coral reef</a></li>
   </ul>
   
   
@@ -298,11 +302,11 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="/talk/blogdown_website/">Creating a personal website with blogdown</a></li>
+    <li><a href="http://www.jamieafflerbach.com/talk/blogdown_website/">Creating a personal website with blogdown</a></li>
   </ul>
   
   <ul>
-    <li><a href="/talk/ohi-ne/">Ocean Health Index in the US Northeast</a></li>
+    <li><a href="http://www.jamieafflerbach.com/talk/ohi-ne/">Ocean Health Index in the US Northeast</a></li>
   </ul>
   
   
@@ -312,11 +316,15 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="/project/datalimited/">Data-Limited Fisheries</a></li>
+    <li><a href="http://www.jamieafflerbach.com/project/cumulativehumanimpacts/">Cumulative Human Impacts</a></li>
   </ul>
   
   <ul>
-    <li><a href="/project/oceanhealthindex/">Ocean Health Index</a></li>
+    <li><a href="http://www.jamieafflerbach.com/project/datalimited/">Data-Limited Fisheries</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="http://www.jamieafflerbach.com/project/oceanhealthindex/">Ocean Health Index</a></li>
   </ul>
   
   
