--- a/public/publication/bsr/index.html
+++ b/public/publication/bsr/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="Here, we present the first CHI assessment of an Arctic ecosystem to incorporate sea ice as a habitat and assess impact seasonality, using the Bering Strait Region (BSR) as a case study. We find that cumulative impacts differ seasonally, with lower impacts in winter and higher impacts in summer months. Large portions of the BSR have significantly different impacts within each season when compared to a mean annual cumulative impact map. Cumulative impacts also have great spatial variability, with Russian waters between 2.38 and 3.63 times as impacted as US waters.">
 
   
-  <link rel="alternate" hreflang="en-us" href="/publication/bsr/">
+  <link rel="alternate" hreflang="en-us" href="http://www.jamieafflerbach.com/publication/bsr/">
 
   
 
@@ -74,15 +74,15 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/publication/bsr/">
+  <link rel="canonical" href="http://www.jamieafflerbach.com/publication/bsr/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -90,7 +90,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="/publication/bsr/">
+  <meta property="og:url" content="http://www.jamieafflerbach.com/publication/bsr/">
   <meta property="og:title" content="Cumulative human impacts in the Bering Strait Region | Jamie Afflerbach">
   <meta property="og:description" content="Here, we present the first CHI assessment of an Arctic ecosystem to incorporate sea ice as a habitat and assess impact seasonality, using the Bering Strait Region (BSR) as a case study. We find that cumulative impacts differ seasonally, with lower impacts in winter and higher impacts in summer months. Large portions of the BSR have significantly different impacts within each season when compared to a mean annual cumulative impact map. Cumulative impacts also have great spatial variability, with Russian waters between 2.38 and 3.63 times as impacted as US waters.">
   <meta property="og:locale" content="en-us">
@@ -272,35 +272,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Cumulative%20human%20impacts%20in%20the%20Bering%20Strait%20Region&amp;url=%2fpublication%2fbsr%2f"
+         href="https://twitter.com/intent/tweet?text=Cumulative%20human%20impacts%20in%20the%20Bering%20Strait%20Region&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fbsr%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=%2fpublication%2fbsr%2f"
+         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fbsr%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fbsr%2f&amp;title=Cumulative%20human%20impacts%20in%20the%20Bering%20Strait%20Region"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fbsr%2f&amp;title=Cumulative%20human%20impacts%20in%20the%20Bering%20Strait%20Region"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fbsr%2f&amp;title=Cumulative%20human%20impacts%20in%20the%20Bering%20Strait%20Region"
+         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fbsr%2f&amp;title=Cumulative%20human%20impacts%20in%20the%20Bering%20Strait%20Region"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Cumulative%20human%20impacts%20in%20the%20Bering%20Strait%20Region&amp;body=%2fpublication%2fbsr%2f">
+         href="mailto:?subject=Cumulative%20human%20impacts%20in%20the%20Bering%20Strait%20Region&amp;body=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fbsr%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
