--- a/public/publication/fish_response_el_nino_meps/index.html
+++ b/public/publication/fish_response_el_nino_meps/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="This study examined fluctuations in an eastern Pacific reef fish assemblage as it var-ied with coral recovery over 30 yr. Concurrent fish and coral monitoring were conducted at UvaIsland reef, which lies within the boundaries of Coiba National Park, Panama, in an area that hasreceived virtually no fishing pressure or watershed development over the past 80 yr. Coral andfish monitoring spanned the 1982−1983 and 1997−1998 El Niño disturbances — anomalous warm-ing events that selectively killed reef-building corals. While no fish mortalities were observed dur-ing  the  1982−1983  El  Niño  event,  live  coral  cover  was  reduced  to  nearly  0%  at  the  study  reef.From 1984 to 1990, live coral (Pocilloporaspp.) cover was extremely low (&lt; 5%), but demonstratedsteady recovery to ~35% by 2010. By quantifying disturbance-related, long-term changes in coralreef resources and relating these to fish trophic group responses, several functional relationshipsemerged. A total of 63 fish taxa were observed, and reef fish density (all taxa combined) remainedrelatively stable. Multivariate analysis of species abundances revealed a strong overlap betweenseasons and a clustering of community composition in the years following bleaching. Fish speciesrichness increased significantly as live coral cover rose from near 0 to 15−20% and then demon-strated  a  decreasing  trend  to  35%  cover.  Benthic  invertivores  showed  a  significant  parabolicincrease in density peaking at ~20% live coral cover. A pattern of decline was apparent for themixed diet feeders guild as coral cover increased, whereas an asymptotic relationship with coralcover emerged for the facultative corallivore guild. No clear patterns in herbivore, piscivore andplanktivore  abundance  were  apparent  with  increasing  coral  cover.  The  varying  responses  ofinvertivore, corallivore and mixed diet feeders guilds demonstrated strong associations with coralcover, probably reflecting changes in the availability of their respective trophic resources duringreef recovery. Thus, variations in coral cover probably influence fish communities through trophicpathways involving invertebrate food sources.">
 
   
-  <link rel="alternate" hreflang="en-us" href="/publication/fish_response_el_nino_meps/">
+  <link rel="alternate" hreflang="en-us" href="http://www.jamieafflerbach.com/publication/fish_response_el_nino_meps/">
 
   
 
@@ -74,15 +74,15 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/publication/fish_response_el_nino_meps/">
+  <link rel="canonical" href="http://www.jamieafflerbach.com/publication/fish_response_el_nino_meps/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -90,7 +90,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="/publication/fish_response_el_nino_meps/">
+  <meta property="og:url" content="http://www.jamieafflerbach.com/publication/fish_response_el_nino_meps/">
   <meta property="og:title" content="Eastern Pacific reef fish responses to coral recovery following El Niño disturbances | Jamie Afflerbach">
   <meta property="og:description" content="This study examined fluctuations in an eastern Pacific reef fish assemblage as it var-ied with coral recovery over 30 yr. Concurrent fish and coral monitoring were conducted at UvaIsland reef, which lies within the boundaries of Coiba National Park, Panama, in an area that hasreceived virtually no fishing pressure or watershed development over the past 80 yr. Coral andfish monitoring spanned the 1982−1983 and 1997−1998 El Niño disturbances — anomalous warm-ing events that selectively killed reef-building corals. While no fish mortalities were observed dur-ing  the  1982−1983  El  Niño  event,  live  coral  cover  was  reduced  to  nearly  0%  at  the  study  reef.From 1984 to 1990, live coral (Pocilloporaspp.) cover was extremely low (&lt; 5%), but demonstratedsteady recovery to ~35% by 2010. By quantifying disturbance-related, long-term changes in coralreef resources and relating these to fish trophic group responses, several functional relationshipsemerged. A total of 63 fish taxa were observed, and reef fish density (all taxa combined) remainedrelatively stable. Multivariate analysis of species abundances revealed a strong overlap betweenseasons and a clustering of community composition in the years following bleaching. Fish speciesrichness increased significantly as live coral cover rose from near 0 to 15−20% and then demon-strated  a  decreasing  trend  to  35%  cover.  Benthic  invertivores  showed  a  significant  parabolicincrease in density peaking at ~20% live coral cover. A pattern of decline was apparent for themixed diet feeders guild as coral cover increased, whereas an asymptotic relationship with coralcover emerged for the facultative corallivore guild. No clear patterns in herbivore, piscivore andplanktivore  abundance  were  apparent  with  increasing  coral  cover.  The  varying  responses  ofinvertivore, corallivore and mixed diet feeders guilds demonstrated strong associations with coralcover, probably reflecting changes in the availability of their respective trophic resources duringreef recovery. Thus, variations in coral cover probably influence fish communities through trophicpathways involving invertebrate food sources.">
   <meta property="og:locale" content="en-us">
@@ -272,35 +272,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Eastern%20Pacific%20reef%20fish%20responses%20to%20coral%20recovery%20following%20El%20Ni%c3%b1o%20disturbances&amp;url=%2fpublication%2ffish_response_el_nino_meps%2f"
+         href="https://twitter.com/intent/tweet?text=Eastern%20Pacific%20reef%20fish%20responses%20to%20coral%20recovery%20following%20El%20Ni%c3%b1o%20disturbances&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2ffish_response_el_nino_meps%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=%2fpublication%2ffish_response_el_nino_meps%2f"
+         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2ffish_response_el_nino_meps%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2ffish_response_el_nino_meps%2f&amp;title=Eastern%20Pacific%20reef%20fish%20responses%20to%20coral%20recovery%20following%20El%20Ni%c3%b1o%20disturbances"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2ffish_response_el_nino_meps%2f&amp;title=Eastern%20Pacific%20reef%20fish%20responses%20to%20coral%20recovery%20following%20El%20Ni%c3%b1o%20disturbances"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2ffish_response_el_nino_meps%2f&amp;title=Eastern%20Pacific%20reef%20fish%20responses%20to%20coral%20recovery%20following%20El%20Ni%c3%b1o%20disturbances"
+         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2ffish_response_el_nino_meps%2f&amp;title=Eastern%20Pacific%20reef%20fish%20responses%20to%20coral%20recovery%20following%20El%20Ni%c3%b1o%20disturbances"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Eastern%20Pacific%20reef%20fish%20responses%20to%20coral%20recovery%20following%20El%20Ni%c3%b1o%20disturbances&amp;body=%2fpublication%2ffish_response_el_nino_meps%2f">
+         href="mailto:?subject=Eastern%20Pacific%20reef%20fish%20responses%20to%20coral%20recovery%20following%20El%20Ni%c3%b1o%20disturbances&amp;body=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2ffish_response_el_nino_meps%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
