--- a/public/publication/iucn-aquamaps/index.html
+++ b/public/publication/iucn-aquamaps/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="Species distribution data provide the foundation for a wide range of ecological research studies and conservation management decisions. Two major efforts to provide marine species distributions at a global scale are the International Union for Conservation of Nature (IUCN), which provides expert-generated range maps that outline the complete extent of a species&#39; distribution; and AquaMaps, which provides model-generated species distribution maps that predict areas occupied by the species. Together these databases represent 24,586 species (93.1% within AquaMaps, 16.4% within IUCN), with only 2,330 shared species. Differences in intent and methodology can result in very different predictions of species distributions, which bear important implications for scientists and decision makers who rely upon these datasets when conducting research or informing conservation policy and management actions. Comparing distributions for the small subset of species with maps in both datasets, we found that AquaMaps and IUCN range maps show strong agreement for many well-studied species, but our analysis highlights several key examples in which introduced errors drive differences in predicted species ranges. In particular, we find that IUCN maps greatly overpredict coral presence into unsuitably deep waters, and we show that some AquaMaps computer-generated default maps (only 5.7% of which have been reviewed by experts) can produce odd discontinuities at the extremes of a species’ predicted range. We illustrate the scientific and management implications of these tradeoffs by repeating a global analysis of gaps in coverage of marine protected areas, and find significantly different results depending on how the two datasets are used. By highlighting tradeoffs between the two datasets, we hope to encourage increased collaboration between taxa experts and large scale species distribution modeling efforts to further improve these foundational datasets, helping to better inform science and policy recommendations around understanding, managing, and protecting marine biodiversity.">
 
   
-  <link rel="alternate" hreflang="en-us" href="/publication/iucn-aquamaps/">
+  <link rel="alternate" hreflang="en-us" href="http://www.jamieafflerbach.com/publication/iucn-aquamaps/">
 
   
 
@@ -74,15 +74,15 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/publication/iucn-aquamaps/">
+  <link rel="canonical" href="http://www.jamieafflerbach.com/publication/iucn-aquamaps/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -90,7 +90,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="/publication/iucn-aquamaps/">
+  <meta property="og:url" content="http://www.jamieafflerbach.com/publication/iucn-aquamaps/">
   <meta property="og:title" content="Aligning marine species range data to better serve science and conservation | Jamie Afflerbach">
   <meta property="og:description" content="Species distribution data provide the foundation for a wide range of ecological research studies and conservation management decisions. Two major efforts to provide marine species distributions at a global scale are the International Union for Conservation of Nature (IUCN), which provides expert-generated range maps that outline the complete extent of a species&#39; distribution; and AquaMaps, which provides model-generated species distribution maps that predict areas occupied by the species. Together these databases represent 24,586 species (93.1% within AquaMaps, 16.4% within IUCN), with only 2,330 shared species. Differences in intent and methodology can result in very different predictions of species distributions, which bear important implications for scientists and decision makers who rely upon these datasets when conducting research or informing conservation policy and management actions. Comparing distributions for the small subset of species with maps in both datasets, we found that AquaMaps and IUCN range maps show strong agreement for many well-studied species, but our analysis highlights several key examples in which introduced errors drive differences in predicted species ranges. In particular, we find that IUCN maps greatly overpredict coral presence into unsuitably deep waters, and we show that some AquaMaps computer-generated default maps (only 5.7% of which have been reviewed by experts) can produce odd discontinuities at the extremes of a species’ predicted range. We illustrate the scientific and management implications of these tradeoffs by repeating a global analysis of gaps in coverage of marine protected areas, and find significantly different results depending on how the two datasets are used. By highlighting tradeoffs between the two datasets, we hope to encourage increased collaboration between taxa experts and large scale species distribution modeling efforts to further improve these foundational datasets, helping to better inform science and policy recommendations around understanding, managing, and protecting marine biodiversity.">
   <meta property="og:locale" content="en-us">
@@ -272,35 +272,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Aligning%20marine%20species%20range%20data%20to%20better%20serve%20science%20and%20conservation&amp;url=%2fpublication%2fiucn-aquamaps%2f"
+         href="https://twitter.com/intent/tweet?text=Aligning%20marine%20species%20range%20data%20to%20better%20serve%20science%20and%20conservation&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fiucn-aquamaps%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=%2fpublication%2fiucn-aquamaps%2f"
+         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fiucn-aquamaps%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fiucn-aquamaps%2f&amp;title=Aligning%20marine%20species%20range%20data%20to%20better%20serve%20science%20and%20conservation"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fiucn-aquamaps%2f&amp;title=Aligning%20marine%20species%20range%20data%20to%20better%20serve%20science%20and%20conservation"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fiucn-aquamaps%2f&amp;title=Aligning%20marine%20species%20range%20data%20to%20better%20serve%20science%20and%20conservation"
+         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fiucn-aquamaps%2f&amp;title=Aligning%20marine%20species%20range%20data%20to%20better%20serve%20science%20and%20conservation"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Aligning%20marine%20species%20range%20data%20to%20better%20serve%20science%20and%20conservation&amp;body=%2fpublication%2fiucn-aquamaps%2f">
+         href="mailto:?subject=Aligning%20marine%20species%20range%20data%20to%20better%20serve%20science%20and%20conservation&amp;body=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fiucn-aquamaps%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -392,7 +392,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="/project/deep-learning/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="http://www.jamieafflerbach.com/project/deep-learning/" target="_blank" rel="noopener">
   Project
 </a>
 
