--- a/public/publication/turfs_gecco_2014/index.html
+++ b/public/publication/turfs_gecco_2014/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="Overfishing and degradation of the marine environment continue to plague coastal communities worldwide, with multiple diverse solutions being proposed. Territorial Use Rights for Fisheries (TURFs) is a fishery management approach that aligns fishers’ incentives with sustainability, while marine reserves have proven effective for ecosystem protection, and in some cases for fishery enhancement. These two management approaches are often used in isolation, leaving the potential utility of integrating them poorly understood. We examine cases where TURFs and marine reserves have been implemented together to create “TURF-reserves”. We compiled a database of 27 TURF-reserves and collected information on the governance, management, enforcement, fishing practices, fishing rights, regulations, and design attributes for each site. We address several research questions including: what species are managed with TURF-reserves, how are TURF-reserves created and who is involved in the process? Our findings show that the majority of surveyed TURF-reserves arose from previously established TURF systems that target a range of fisheries, and multiple entities play a role in TURF-reserve development and management. We also examine the differences between two TURF-reserve archetypes and find that those developed with a strong history of customary tenure share distinct qualities from those created in a more recently established, government-mandated system.">
 
   
-  <link rel="alternate" hreflang="en-us" href="/publication/turfs_gecco_2014/">
+  <link rel="alternate" hreflang="en-us" href="http://www.jamieafflerbach.com/publication/turfs_gecco_2014/">
 
   
 
@@ -74,15 +74,15 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/publication/turfs_gecco_2014/">
+  <link rel="canonical" href="http://www.jamieafflerbach.com/publication/turfs_gecco_2014/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -90,7 +90,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="/publication/turfs_gecco_2014/">
+  <meta property="og:url" content="http://www.jamieafflerbach.com/publication/turfs_gecco_2014/">
   <meta property="og:title" content="A global survey of TURF-reserves, Territorial Use Rights for Fisheries coupled with marine reserves | Jamie Afflerbach">
   <meta property="og:description" content="Overfishing and degradation of the marine environment continue to plague coastal communities worldwide, with multiple diverse solutions being proposed. Territorial Use Rights for Fisheries (TURFs) is a fishery management approach that aligns fishers’ incentives with sustainability, while marine reserves have proven effective for ecosystem protection, and in some cases for fishery enhancement. These two management approaches are often used in isolation, leaving the potential utility of integrating them poorly understood. We examine cases where TURFs and marine reserves have been implemented together to create “TURF-reserves”. We compiled a database of 27 TURF-reserves and collected information on the governance, management, enforcement, fishing practices, fishing rights, regulations, and design attributes for each site. We address several research questions including: what species are managed with TURF-reserves, how are TURF-reserves created and who is involved in the process? Our findings show that the majority of surveyed TURF-reserves arose from previously established TURF systems that target a range of fisheries, and multiple entities play a role in TURF-reserve development and management. We also examine the differences between two TURF-reserve archetypes and find that those developed with a strong history of customary tenure share distinct qualities from those created in a more recently established, government-mandated system.">
   <meta property="og:locale" content="en-us">
@@ -272,35 +272,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=A%20global%20survey%20of%20TURF-reserves%2c%20Territorial%20Use%20Rights%20for%20Fisheries%20coupled%20with%20marine%20reserves&amp;url=%2fpublication%2fturfs_gecco_2014%2f"
+         href="https://twitter.com/intent/tweet?text=A%20global%20survey%20of%20TURF-reserves%2c%20Territorial%20Use%20Rights%20for%20Fisheries%20coupled%20with%20marine%20reserves&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fturfs_gecco_2014%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=%2fpublication%2fturfs_gecco_2014%2f"
+         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fturfs_gecco_2014%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fturfs_gecco_2014%2f&amp;title=A%20global%20survey%20of%20TURF-reserves%2c%20Territorial%20Use%20Rights%20for%20Fisheries%20coupled%20with%20marine%20reserves"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fturfs_gecco_2014%2f&amp;title=A%20global%20survey%20of%20TURF-reserves%2c%20Territorial%20Use%20Rights%20for%20Fisheries%20coupled%20with%20marine%20reserves"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fturfs_gecco_2014%2f&amp;title=A%20global%20survey%20of%20TURF-reserves%2c%20Territorial%20Use%20Rights%20for%20Fisheries%20coupled%20with%20marine%20reserves"
+         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fturfs_gecco_2014%2f&amp;title=A%20global%20survey%20of%20TURF-reserves%2c%20Territorial%20Use%20Rights%20for%20Fisheries%20coupled%20with%20marine%20reserves"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=A%20global%20survey%20of%20TURF-reserves%2c%20Territorial%20Use%20Rights%20for%20Fisheries%20coupled%20with%20marine%20reserves&amp;body=%2fpublication%2fturfs_gecco_2014%2f">
+         href="mailto:?subject=A%20global%20survey%20of%20TURF-reserves%2c%20Territorial%20Use%20Rights%20for%20Fisheries%20coupled%20with%20marine%20reserves&amp;body=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fturfs_gecco_2014%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
