--- a/public/talk/ohi-ne/index.html
+++ b/public/talk/ohi-ne/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="">
 
   
-  <link rel="alternate" hreflang="en-us" href="/talk/ohi-ne/">
+  <link rel="alternate" hreflang="en-us" href="http://www.jamieafflerbach.com/talk/ohi-ne/">
 
   
 
@@ -67,15 +67,15 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/talk/ohi-ne/">
+  <link rel="canonical" href="http://www.jamieafflerbach.com/talk/ohi-ne/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -83,7 +83,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="/talk/ohi-ne/">
+  <meta property="og:url" content="http://www.jamieafflerbach.com/talk/ohi-ne/">
   <meta property="og:title" content="Ocean Health Index in the US Northeast | Jamie Afflerbach">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
@@ -265,35 +265,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Ocean%20Health%20Index%20in%20the%20US%20Northeast&amp;url=%2ftalk%2fohi-ne%2f"
+         href="https://twitter.com/intent/tweet?text=Ocean%20Health%20Index%20in%20the%20US%20Northeast&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2ftalk%2fohi-ne%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=%2ftalk%2fohi-ne%2f"
+         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.jamieafflerbach.com%2ftalk%2fohi-ne%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2ftalk%2fohi-ne%2f&amp;title=Ocean%20Health%20Index%20in%20the%20US%20Northeast"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2ftalk%2fohi-ne%2f&amp;title=Ocean%20Health%20Index%20in%20the%20US%20Northeast"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2ftalk%2fohi-ne%2f&amp;title=Ocean%20Health%20Index%20in%20the%20US%20Northeast"
+         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fwww.jamieafflerbach.com%2ftalk%2fohi-ne%2f&amp;title=Ocean%20Health%20Index%20in%20the%20US%20Northeast"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Ocean%20Health%20Index%20in%20the%20US%20Northeast&amp;body=%2ftalk%2fohi-ne%2f">
+         href="mailto:?subject=Ocean%20Health%20Index%20in%20the%20US%20Northeast&amp;body=http%3a%2f%2fwww.jamieafflerbach.com%2ftalk%2fohi-ne%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
